--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   pool: 5
   timeout: 5000
 
-test:
+test: &test
   adapter: postgresql
   database: demo_app_test
   pool: 5
@@ -15,3 +15,6 @@ production:
   database: demo_app_prod
   pool: 5
   timeout: 5000
+
+cucumber:
+  <<: *test
